added the content for the about me page with filler text for now

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
         <a href="index.html" class="navbar-brand">John Jacobson</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,6 +27,35 @@
             </ul>
         </div>
     </nav>
+
+    <div class="container bg-light border">
+        <header class="row">
+            <div class="col-12">
+                <h1>About Me</h1>
+                <hr class="my-4">
+            </div>
+        </header>
+        <main class="row">
+            <div class="col-12">
+                <img class="w-25 mr-3 mb-3 mr-lg-4 mb-lg-4" id="headshot" src="assets/images/headshot.jpg" alt="Image of John Jacobson">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur sed nemo voluptas optio harum, a
+                    ea dicta dolores dolor similique odit ducimus reiciendis est ipsum molestiae nam, voluptatum
+                    repellendus repellat.
+                    Omnis dolorem molestiae excepturi officia atque, doloremque error asperiores suscipit quis
+                    necessitatibus! Labore veritatis odio, earum itaque quos impedit perferendis ratione aperiam autem
+                    vero dolores expedita commodi eum officiis illo.
+                    Iste rerum ullam incidunt praesentium animi fugiat quas obcaecati corporis veritatis debitis,
+                    voluptatem architecto eligendi ad ducimus fuga non cumque minima accusamus laboriosam, odio aliquid
+                    tempora consectetur provident? Quas, obcaecati?
+                    Explicabo velit asperiores voluptatum consectetur laudantium nemo rem, minus eveniet possimus harum!
+                    Nihil dicta fuga voluptate eaque, ut commodi recusandae, deleniti neque illum tempore aspernatur
+                    consequuntur possimus nemo velit rerum.
+                    Laudantium sint eos asperiores ullam, dignissimos nisi minus laborum dolorum consectetur quos
+                    debitis error sed esse est atque ad in excepturi delectus deleniti eaque blanditiis fugiat, voluptas
+                    porro nostrum. Ipsum.</p>
+            </div>
+        </main>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
