--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-        <a href="index.html" class="navbar-brand">John Jacobson</a>
+        <!-- manually override the text color -->
+        <a href="index.html" class="navbar-brand" style="color: var(--accent-color);">John Jacobson</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -30,7 +31,7 @@
 
     <div class="container bg-light border">
         <header class="row">
-            <div class="col-12">
+            <div class="col-12 text-accent">
                 <h1>About Me</h1>
                 <hr class="my-4">
             </div>
