--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container bg-light border">
         <header class="row">
             <div class="col-12 text-accent">
-                <h1>About Me</h1>
+                <h1 class="mt-2">About Me</h1>
                 <hr class="my-4">
             </div>
         </header>
