--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,14 @@
         </div>
     </nav>
 
+    <div class="container bg-light border">
+        <header class="row">
+            <div class="col-12 text-accent">
+                <h1 class="mt-2">Contact</h1>
+                <hr class="my-4">
+            </div>
+        </header>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
