--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,23 @@
                 <hr class="my-4">
             </div>
         </header>
+        <main class="row">
+            <form class="col-sm-10">
+                <div class="form-group">
+                    <label for="inputName">Name</label>
+                    <input type="text" class="form-control" id="inputName">
+                </div>
+                <div class="form-group">
+                    <label for="inputEmail">Email</label>
+                    <input type="email" class="form-control" id="inputEmail">
+                </div>
+                <div class="form-group">
+                    <label for="inputMessage">Message</label>
+                    <textarea type="text" class="form-control" id="inputMessage"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Send</button>
+            </form>
+        </main>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
