switched from top margin in the header to vertical padding in the page container

--- a/contact.html
+++ b/contact.html
@@ -29,10 +29,10 @@
         </div>
     </nav>
 
-    <div class="container bg-light border">
+    <div class="container bg-light border py-2">
         <header class="row">
             <div class="col-12 text-accent">
-                <h1 class="mt-2">Contact</h1>
+                <h1>Contact</h1>
                 <hr class="my-4">
             </div>
         </header>
