--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         </div>
     </nav>
 
-    <div class="container bg-light border">
+    <div class="container bg-light border py-2">
         <header class="row">
             <div class="col-12 text-accent">
-                <h1 class="mt-2">About Me</h1>
+                <h1>About Me</h1>
                 <hr class="my-4">
             </div>
         </header>
