--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                     <label for="inputMessage">Message</label>
                     <textarea type="text" class="form-control" id="inputMessage"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Send</button>
+                <button type="submit" class="btn btn-primary bg-accent">Send</button>
             </form>
         </main>
     </div>
