--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>John Jacobson: Contact</title>
 
+    <!-- link the bootstrap stylsheet and my stylesheet -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -37,6 +38,7 @@
             </div>
         </header>
         <main class="row">
+            <!-- placeholder form, doesn't do anything yet. width depends on page size -->
             <form class="col-sm-10">
                 <div class="form-group">
                     <label for="inputName">Name</label>
@@ -55,6 +57,7 @@
         </main>
     </div>
 
+    <!-- adds the JavaScript required by bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
