--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>John Jacobson: About Me</title>
 
+    <!-- link the bootstrap stylsheet and my stylesheet -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -38,7 +39,10 @@
         </header>
         <main class="row">
             <div class="col-12">
-                <img class="w-25 mr-3 mb-3 mr-lg-4 mb-lg-4" id="headshot" src="assets/images/headshot.jpg" alt="Image of John Jacobson">
+                <!-- headshot image with a width of 25% of the container and margins on the sides adjacent to text that
+                    change with the page size -->
+                <img class="w-25 mr-3 mb-3 mr-lg-4 mb-lg-4" id="headshot" src="assets/images/headshot.jpg"
+                    alt="Image of John Jacobson">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur sed nemo voluptas optio harum, a
                     ea dicta dolores dolor similique odit ducimus reiciendis est ipsum molestiae nam, voluptatum
                     repellendus repellat.
@@ -58,6 +62,7 @@
         </main>
     </div>
 
+    <!-- adds the JavaScript required by bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
