--- a/contact.html
+++ b/contact.html
@@ -42,15 +42,15 @@
             <form class="col-sm-10">
                 <div class="form-group">
                     <label for="inputName">Name</label>
-                    <input type="text" class="form-control" id="inputName">
+                    <input type="text" class="form-control" id="inputName" placeholder="Name">
                 </div>
                 <div class="form-group">
                     <label for="inputEmail">Email</label>
-                    <input type="email" class="form-control" id="inputEmail">
+                    <input type="email" class="form-control" id="inputEmail" placeholder="Email">
                 </div>
                 <div class="form-group">
                     <label for="inputMessage">Message</label>
-                    <textarea type="text" class="form-control" id="inputMessage"></textarea>
+                    <textarea type="text" class="form-control" id="inputMessage" placeholder="Message"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary bg-accent">Send</button>
             </form>
