--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,41 @@
         </div>
     </nav>
 
+    <div class="container bg-light border py-2">
+        <header class="row">
+            <div class="col-12 text-accent">
+                <h1>Portfolio</h1>
+                <hr class="my-4">
+            </div>
+        </header>
+        <main class="row">
+            <div class="container">
+                <div class="row">
+                    <section class="col-12 col-md-6 col-xl-4 mb-4">
+                        <div class="card"><img src="http://placekitten.com/350/350" alt="placeholder image of a kitten" class="card-img-top"></div>
+                    </section>
+                    <section class="col-12 col-md-6 col-xl-4 mb-4">
+                        <div class="card"><img src="http://placekitten.com/350/350" alt="placeholder image of a kitten" class="card-img-top"></div>
+                    </section>
+                    <section class="col-12 col-md-6 col-xl-4 mb-4">
+                        <div class="card"><img src="http://placekitten.com/350/350" alt="placeholder image of a kitten" class="card-img-top"></div>
+                    </section>
+                    <section class="col-12 col-md-6 col-xl-4 mb-4">
+                        <div class="card"><img src="http://placekitten.com/350/350" alt="placeholder image of a kitten" class="card-img-top"></div>
+                    </section>
+                    <section class="col-12 col-md-6 col-xl-4 mb-4">
+                        <div class="card"><img src="http://placekitten.com/350/350" alt="placeholder image of a kitten" class="card-img-top"></div>
+                    </section>
+                    <section class="col-12 col-md-6 col-xl-4 mb-4">
+                        <div class="card"><img src="http://placekitten.com/350/350" alt="placeholder image of a kitten" class="card-img-top"></div>
+                    </section>
+                    <section class="col-12 col-md-6 col-xl-4 mb-4">
+                        <div class="card"><img src="http://placekitten.com/350/350" alt="placeholder image of a kitten" class="card-img-top"></div>
+                    </section>
+                </div>
+            </div>
+        </main>
+    </div>
 
     <!-- adds the JavaScript required by bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
