added real info to the about me section

--- a/index.html
+++ b/index.html
@@ -43,21 +43,13 @@
                     change with the page size -->
                 <img class="w-25 mr-3 mb-3 mr-lg-4 mb-lg-4" id="headshot" src="assets/images/headshot.jpg"
                     alt="Image of John Jacobson">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur sed nemo voluptas optio harum, a
-                    ea dicta dolores dolor similique odit ducimus reiciendis est ipsum molestiae nam, voluptatum
-                    repellendus repellat.
-                    Omnis dolorem molestiae excepturi officia atque, doloremque error asperiores suscipit quis
-                    necessitatibus! Labore veritatis odio, earum itaque quos impedit perferendis ratione aperiam autem
-                    vero dolores expedita commodi eum officiis illo.
-                    Iste rerum ullam incidunt praesentium animi fugiat quas obcaecati corporis veritatis debitis,
-                    voluptatem architecto eligendi ad ducimus fuga non cumque minima accusamus laboriosam, odio aliquid
-                    tempora consectetur provident? Quas, obcaecati?
-                    Explicabo velit asperiores voluptatum consectetur laudantium nemo rem, minus eveniet possimus harum!
-                    Nihil dicta fuga voluptate eaque, ut commodi recusandae, deleniti neque illum tempore aspernatur
-                    consequuntur possimus nemo velit rerum.
-                    Laudantium sint eos asperiores ullam, dignissimos nisi minus laborum dolorum consectetur quos
-                    debitis error sed esse est atque ad in excepturi delectus deleniti eaque blanditiis fugiat, voluptas
-                    porro nostrum. Ipsum.</p>
+                <p>My name is John Jacobson. I am a software developer with experience in full stack web development
+                    including HTML5, CSS3, JavaScript, jQuery, Bootstrap, and PHP; as well as SQL, Python, Java, and
+                    Android development. I have been coding since my dad taught me BASIC on his Apple II Plus when I was
+                    8 years old.</p>
+                <p>I also have experience as an instructor, teaching martial arts. I have been training in karate since
+                    I was 9 and teaching since I was 15. I currently hold the rank of Sandan, or 3<sup>rd</sup> degree
+                    black belt, and I am a certified instructor.</p>
             </div>
         </main>
     </div>
