added github and linkedin links

--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
                     black belt, and I am a certified instructor.</p>
             </div>
         </main>
+        <section class="row">
+            <div class="col">
+                <h2>Find me on:</h2>
+                <ul>
+                    <li>Github: <a href="https://github.com/JohnDJake">github.com/JohnDJake</a></li>
+                    <li>Linkedin: <a href="https://www.linkedin.com/in/johndjake/">linkedin.com/in/JohnDJake</a></li>
+                </ul>
+            </div>
+        </section>
     </div>
 
     <!-- adds the JavaScript required by bootstrap -->
